<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="hello">Hello World, DatumDroidOCRActivity!</string>
    <string name="app_name">PicCal Picture Calculator</string>
    
    <string name="text_hint1">Input from OCRed Text (field1)</string>
    <string name="text_hint2">Output (field2)</string>
    
	<string name="change_image">Change Image</string>
	<string name="get_image">Get Image</string>
	<string name="imageView_desc">Image View</string>
	<string name="get_result">Get Result</string>
	<string name="clear_text">Clear Text</string>
	<string name="take_pic">Take Pic</string>
	
</resources>